test/gator/test/fixtures/manifests/invalid-resources/constraint.yaml
kind: AlwaysValidate
apiVersion: constraints.gatekeeper.sh/v1beta1
metadata:
  name: always-pass
  {}: {}
